# pyngleton

./: .gitignore  LICENSE  README  README.md  pyproject.toml
src/pyngleton/: __init__.py
tests/: test_singleton.py
