[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyngleton_yourlogarithm"
version = "0.0.1"
authors = [
  { name="Vlad-Sebastian Cretu", email="vlad.sebastian.cretu.dev@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourlogarithm/pyngleton"
"Bug Tracker" = "https://github.com/yourlogarithm/pyngleton/issues"