[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyngleton"
version = "0.0.7"
authors = [
  { name="Vlad-Sebastian Cretu", email="vlad.sebastian.cretu.dev@gmail.com" },
]
description = "Singleton decorator/class/metaclass"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourlogarithm/pyngleton"
"Bug Tracker" = "https://github.com/yourlogarithm/pyngleton/issues"